# BACCA

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux32.yml  linux64.yml  macos.yml
doc/: README.txt  config_base.yaml  config_travis.yaml
include/: Cederberg_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical-classical_center_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical-classical_first_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical-classical_last_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical-classical_single_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical_center_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical_first_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical_last_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_hamlet_center_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_hamlet_first_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_hamlet_last_line_forest_code.inc.h  Cederberg_Spaghetti_FREQ_hamlet_single_line_forest_code.inc.h  Cederberg_Spaghetti_center_line_forest_code.inc.h  Cederberg_Spaghetti_first_line_forest_code.inc.h  Cederberg_Spaghetti_last_line_forest_code.inc.h  Cederberg_Spaghetti_single_line_forest_code.inc.h  Cederberg_Tree_tree_code.inc.h  Scheffler_Spaghetti_below_line_forest_code.inc.h  Scheffler_Spaghetti_center_line_forest_code.inc.h  Scheffler_Spaghetti_first_line_forest_code.inc.h  bacca_tests.h  cederberg_forest.inc  cederberg_forest_first_line.inc  cederberg_lut.inc  chain_code.h  chaincode_algorithms.h  chaincode_cederberg.h  chaincode_chang.h  chaincode_correct.h  chaincode_scheffler.h  chaincode_suzuki.h  chaincode_suzuki_handmade.h  config_data.h  file_manager.h  latex_generator.h  memory_tester.h  performance_evaluator.h  progress_bar.h  register.h  scheffler_lut.inc  stream_demultiplexer.h  (+3 more)
src/: bacca_tests.cc  chain_code.cc  chaincode_algorithms.cc  chaincode_cederberg.cc  chaincode_chang.cc  chaincode_correct.cc  chaincode_scheffler.cc  chaincode_suzuki.cc  chaincode_suzuki_handmade.cc  config_data.cc  file_manager.cc  latex_generator.cc  main.cc  system_info.cc  utilities.cc
tools/actions-scripts/: macos-before-install.sh
tools/travis-scripts/: before-install.sh  run-script.sh
